--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,10 @@
 
+.source-serif-4 {
+    font-family: "Source Serif 4", serif;
+    font-optical-sizing: auto;
+    font-weight: 400;
+    font-style: normal;
+}
 .Imagen{
     width: 100%;
     gap: 0px;
